Fixed font overlap (hopefully)

--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -7,7 +7,7 @@
 
 .intro {
     width: 100%;
-    height: calc(100vh - 400px);
+    height: calc(100vh - 100px);
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -19,7 +19,7 @@
 
 .intro h1 {
     font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 60px;
+    font-size: 5vw;
     color: #e9d35b;
     margin: auto;
     height: 5px;
@@ -27,7 +27,7 @@
 
 .intro h2 {
     font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 30px;
+    font-size: 2vw;
     color: #f0f0f0;
     height: 50px;
     margin: 10%;
@@ -39,17 +39,18 @@
 
 .about {
     width: 100%;
-    height: calc(100vh - 200px);
+    height: calc(100vh - 100px);
     display: flex;
     flex-direction: column;
     background-color: #282b30;
     color: #f0f0f0;
     justify-content: left;
+    margin: auto;
 }
 
 .about h1 {
     font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 50px;
+    font-size: 4vw;
     color: #e9d35b;
     height: 50px;
     margin: 10%;
@@ -60,7 +61,7 @@
 
 .about p {
     font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 30px;
+    font-size: 2vw;
     color: white;
     margin-right: 10%;
     text-align: left;
@@ -68,7 +69,7 @@
 
 .profile {
     width: 50%;
-    height: calc(100vh - 200px);
+    height: calc(100vh - 100px);
     display: flex;
     flex-direction: column;
     background-color: #282b30;
@@ -84,7 +85,6 @@
 
 .intro .prompt {
     width: 40%;
-    font-size: 30px;
 }
 
 .about .prompt {
@@ -98,85 +98,44 @@
     color: white;
 }
 
+
 .skills {
-    font-size: 25px;
+    width: 100%;
+    height: calc(100vh - 100px);
     display: flex;
-    justify-content: center;
     flex-direction: column;
+    justify-content: center;
     align-items: center;
+    text-align: center;
     background-color: #282b30;
+    color: #f0f0f0;
 }
 
 .skills h1 {
+    font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 5vw;
     color: #e9d35b;
-    size: 50px;
-    margin: auto;
-    text-align: center;
-    width: 5%;
+    height: 20px;
 }
 
 .skills h2 {
+    font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 3vw;
     color: #5f7cce;
-    text-align: center;
-    margin: 3%;
 }
 
-.skills .list {
-    list-style: none;
-    width: 60%;
+.skills p {
+    font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 2vw;
     color: #f0f0f0;
-    text-align: center;
 }
 
-.list .icons {
-    font-size: 50px;
+.skills svg {
+    color: white;
+    margin: 7px;
+    font-size: 4vw;
 }
 
-.icons svg {
-    font-size: 60px;
-    margin: 15px;
-}
-
-@media only screen and (max-width: 600px) {
-    .intro h1 {
-        font-size: 30px;
-        height: 50px;
-    }
-     .intro h2 {
-         font-size: 20px;
-         height: 200px;
-     }
-
-    .intro .prompt {
-        margin-top: 10px;
-        font-size: 20px;
-        width: 80%;
-    }
-
-    .about h1 {
-        font-size: 40px;
-    }
-
-    .about p {
-        font-size: 18px;
-    }
-
-    .about .prompt {
-        margin-top: 10px;
-        font-size: 20px;
-        width: 80%;
-    }
-
-    .skills {
-        text-align: center;
-    }
-    .list {
-        padding: 0;
-    }
-    .skills h1 {
-        width: 40%;
-    }
-    .skills h2 {
-        font-size: 30px;
-    }
+.skills .prompt {
+    width: 40%;
 }
